# ecoplace

./: .env  .eslintcache  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
backend/organizations/: organizations.dockerfile  pyproject.toml
backend/organizations/app/: main.py  models.py  schemas.py
backend/users/app/: main.py
frontend/: .eslintcache  package-lock.json  package.json
frontend/src/: App.js
public/fonts/: gilroy.css
src/: App.js  index.css  index.js
src/components/Authorize/: index.js
src/components/Buttons/: Button.js  Link.js  LinkOnClick.js
src/components/ChooseTypeOfWaste/: index.js
src/components/DropDownDescription/: index.js
src/components/Footer/: index.js
src/components/Header/: index.js
src/components/InputChoose/: index.js
src/components/InputText/: index.js
src/components/Table/: index.js
src/components/Topic/: index.js
src/components/TypeOfWaste/: index.js
src/fonts/: gilroy.css
src/pages/About/: index.js
src/pages/FAQ/: index.js
src/pages/Profile/: index.js
src/pages/Rating/: index.js
src/pages/Registration/: index.js
